--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         <!--Unit converting sections-->
         <div class = "Unit-Converter">
-            <input id="input1" type="number" placeholder="Enter the value">
-            <input id="input2" type="text" placeholder="Unit form ( m, kg, C)">
-            <input id="input3" type="text" placeholder="Unit to ( km, lb, F)">
+        <input id="input1" type="number" placeholder="Enter the value">
+        <input id="input2" type="text" placeholder="Unit from (length: mm, cm; weight: g, kg; temp: C, F)">
+        <input id="input3" type="text" placeholder="Unit to (choose compatible unit)">
         </div>
         
         <!-- Unit section-->
